# vmd2png

./: .gitignore  LICENSE  README.jp.md  README.md  README.zh-CN.md  pyproject.toml  test_metadata.py
src/motion_vmd_utils/: bone.py  skeleton.py  vmd.py
src/vmd2png/: __init__.py  bone.py  cli.py  converter.py  ik.py  preview.py  skeleton.py  vmd.py
tests/: manual_tests.py  test_convert.py  test_ik.py  test_metadata.py  test_png_metadata.py  test_roundtrip.py
