[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vmd2png"
version = "0.1.0"
description = "Utilities for VMD motion files: parsing, conversion, and preview"
authors = [
  { name="Alloystorm", email="alloystorm@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "Pillow",
    "matplotlib", 
]

[project.urls]
"Homepage" = "https://github.com/alloystorm/motion_vmd_utils"
